<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="server_name">Server Name:</string>
    <string name="app_name">TrackJD</string>
    <string name="stop">Stop</string>
    <string name="dim_screen">dim screen</string>
    <string name="export_csvs">Export CSV Files</string>
    <string name="enable_logging">enable logging</string>
    <string name="points_on_device_label">points on device:</string>

</resources>